Project holenav_server {
  database_type: "MongoDB"
}

Table users {
  id uuid
  main characters [ref: - characters._id]
  alts characters[] [ref: < characters._id]
  tokens string[]
  folderRoles folderRoles[] [ref: < folderRoles._id]
  activeFolder folders [ref: - folders._id]
  settings userSettings
  systemRole SystemRoles
}

Table characters {
  _id number
  name string
  esiId string
  accessToken string
  refreshToken string
}

Table folderRoles {
  _id number
  role FolderRoles
  folder folders [ref: - folders._id]
}

Table ssoSessions {
  key string
  type SsoSessionTypes
  expiry Date
  ssoLoginSuccess boolean
  character characters [ref: - characters._id]
}

Table folders {
  _id number
  id uuid
  name string
}

Table systems {
  _id number
  id uuid
  name string
  folder folders [ref: > folders._id]
  signatures signatures[] [ref: < signatures._id]
}

Table signatures {
  _id number
  id uuid
  eveId string
  type SigTypes
  name string
}

Table wormholes {
  _id number
  id uuid
  eveId string
  name string
  type string
  eol boolean
  massStatus WhMass
  folder folders [ref: > folders._id]
  systemName string
  destinationName string
  reverse wormholes [ref: - wormholes._id]
  reverseType string
}

enum FolderRoles {
  READ
  WRITE
  MANAGE
  ADMIN
}

enum SigTypes {
  DATA
  RELIC
}

enum WhMass {
  STABLE
  DESTAB
  CRIT
}

enum SsoSessionTypes {
  LOGIN
  ADD_CHARACTER
}

enum SystemRoles {
  SOLDIER
  CAPTAIN
  DIRECTOR
}
